--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     }
   },
   "dependencies": {
+    "@types/pdfmake": "0.1.17",
     "antd": "4.15.4",
+    "classnames": "2.3.1",
+    "pdfkit": "0.12.1",
+    "pdfmake": "0.1.71",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
