Выносит верстку калькулятора в отдельный компонент. Делает рефакторинг стилей и логики калькулятора. Подключает MobX. Добавляет получение данных из MobX

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
       "caStore/*": [
         "src/store/*"
       ],
+      "caScreens/*": [
+        "src/screens/*"
+      ],
     },
     "lib": [
       "dom",
